k8s/pod-inference.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pm25-inference-pod
  labels:
    app: my-inference
spec:
  containers:
    - name: container-inference
      image: danyukov/cloud-cs-pm25:inference-service
      ports:
        - containerPort: 8000
