k8s/ingress-inference.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - inference.local
      secretName: keycloak-local-tls
  rules:
    - host: inference.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-service-inference
                port:
                  number: 80
